--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "express": "2.5.8",
-    "jade": ">= 0.0.1",
-    "supervisor": "~0.6.0"
+    "jade": ">= 0.0.1"
   }
 }
