--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "dependencies": {
     "express": "2.5.8",
     "jade": ">= 0.0.1",
-    "mongodb": "~2.0.25"
+    "mongodb": "~2.0.25",
+    "mongoose": "^4.0.1",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^1.0.0"
   }
 }
